# student-voropaeva.e.a

./: .gitignore
HW10-11/: report.md
HW10-11/artifacts/: runs.csv
homeworks/: HW01  HW01.ipynd  README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md
homeworks/HW04/eda-cli/: .gitignore  README.md  pyproject.toml
homeworks/HW04/eda-cli/data/: test_flags.csv
homeworks/HW04/eda-cli/src/eda_cli/: api.py  cli.py
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  dataset_01_clusters.csv  dataset_02_clusters.csv  dataset_03_clusters.csv  metrics_summary.json
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: report.md  runs.csv
homeworks/HW10-11/artifacts/: best_classifier.pt  best_classifier_config.json  detection_results.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  gru_model.pth  optional_report.json  results.json  runs.csv
homeworks/HW13/: HW13.ipynb  report.md
homeworks/HW13/artifacts/: sample_predictions.csv  tokenization_examples.txt
homeworks/HW14/: HW14.ipynb  report.md
homeworks/HW14/artifacts/: chunk_examples.csv  chunks.json  eval_baseline.json  experiment_metrics.json  knowledge_base.json  rag_examples.csv  retrieval_eval.csv  (+2 more)
(+4 files in other folders)
